welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: value lenght is not a member of Array[Int]
  while(i < nums.lenght && i < 4){
                 ^