welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  var i:Int = 0
  while(i < nums.lenght && i < 4){
    if(nums(i) == 9)
    	return true
    i += 1
  }
  return false
}
  